--- a/index.html
+++ b/index.html
@@ -28,83 +28,52 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<span style="font-size: 30.0pt;"><img  id="sparkle" src=".\img\Magic Sparcle.gif"/> <u><b>C. Croy-Perrett's Homepage</u></b>
-			<img src=".\img\Magic Sparcle.gif" id="sparkle"/></span>
+			<!--<span style="font-size: 30.0pt;"><img  id="sparkle" src=".\img\Magic Sparcle.gif"/> <u><b>C. Croy-Perrett's Homepage</u></b>
+			<img src=".\img\Magic Sparcle.gif" id="sparkle"/></span>-->
 			<br>
 			<div class="minor-section">
-					<!-- Note that all filenames use lowercase and no spaces -->
-					<!--<img class="salamander-photo" src="https://preview.redd.it/b3px90jwsix51.png?width=450&format=png&auto=webp&s=71a1b64a2cb3cd71c744cc7f5972f04989485a3d">-->
-					<img id="my-portrait" src=".\img\ChaseConventionPortrait.jpeg" />
+					
+					<img id="my-portrait" src=".\img\Chase's Sword Portrait.jpeg" />
 					<h2>About Me</h2>
-					<p>Hi there :D! I am C. Croy-Perrett, a third year Computer Science Student at UCSC!
-						In my free time, I enjoy coding games and making digital art. My favorite pastimes
-						are creating builds in Minecraft, and honing my hand eye cooridination skills in the
-						platformer Celeste. My favorite memories come from playing the collaborative role-playing
-						game Dungeons and Dragons, having served as both player and dungeon master.
-						There is nothing more beautiful than coming together with some
-						friends to create a story for you all to share. I'm excited to be a part of art 101,
-						so I can learn even more about how to use technology to expand my artistic horizons! 
+					<p>I am Chase Croy-Perrett, a Computer Science Student at UCSC!
+						Below are listed a number of creative HTML, Javascript and Website Design based
+						projects. Through these assignments and more, I have cultivated my skill in these
+						fields, and I am excited to put my gained programming expertise to good use in future 
+						endevors. Feel free to look through to see what I can do!
+
 					</p>
 			</div>
 
 
 		</section>
 
+	
 
-		<section>
-		<h2>My Projects</h2>
-		<p>I have made a few small games, and I would love if you were to check them out!</p>
-		<ul id="maraut">
-         <li class="horiz">
-			<h4><a href="https://atypicalcelestial.itch.io/amelia-kevlar" target="_new">Amelia Kevlar</h4><br>
-			<img src="https://img.itch.zone/aW1nLzExOTUzNDQwLnBuZw==/315x250%23c/RGl95Q.png"/> <br></a>
-			A short point and click adventure! <br>Try to navigate a normal school life <br>while stuck with a gun for a hand!
-	     </li>
-
-		 <li class="horiz">
-			<h4><a href="https://jrockefeller.itch.io/droid-dungeon" target="_new">Droid Dungeon</h4><br>
-			<img src="https://img.itch.zone/aW1nLzgzOTA2OTMucG5n/315x250%23c/o5rv8Y.png"/> <br></a>
-			Fight your way through a robotic complex in this<br> 2D dungeoncrawler while balancing your <br>energy for offense and defense!
-	     </li>
-
-		 <li class="horiz">
-			<h4><a href="https://atypicalcelestial.itch.io/bigfoot" target="_new">Looking for Snowboots</h4><br>
-			<img src="https://img.itch.zone/aW1nLzgzMDkzMTQucG5n/315x250%23c/vbXcc%2B.png"/> <br></a>
-			A text based adventure about Bigfoot<br> trying to find some shoes.
-	     </li>
-
-
-		</ul>
-	    </section>
-	</main>
-
-	<section>
-		<div class="assignments major-section">
-			<h2 id="white">Art-101 Labs</h2>
+	
+		<div>
+			<h2 id="white">HTML and Site Design Labs</h2>
 			<ul id="white">
-				<li> <h4> 1: Getting Started</h4>
-				<a href=".\PDFs\Art101-Lab1-3.pdf">The PDF</a></li>
-
-				<li><h4> Lab 2: Our First HTML</h4>
-			    <a href = "https://eldritchsalamancer.github.io/art101/lab2/">The Website</a>
-			    <a href = ".\PDFs\ART101 Lab 2-1.pdf">The PDF</a></li>
-
-				<li><h4> Lab 3: File Structure and Transfer</h4>
-				<a href = "https://eldritchsalamancer.github.io/art101/lab3/">The Website</a>
-				<a href = "https://docs.google.com/document/d/1JkKza4LvymmLDuDCwltl27mO0KHy5XaHc1-NiJtJh0E/edit">The PDF</a></li>
-
-				<li><h4> Lab 4: Pseudocoding and Problem Solving</h4>
-				<a href = "https://wepurpypoo.github.io/art101/lab4/">The Website</a></li>
-
-				<li><h4> Lab 5: Data Types and Variables</h4>
-				Coming soon!</li>
-
-				<li><h4> Lab 6: Arrays and Objects</h4>
-					Coming soon!</li>
+				<li> <h4> <a href=".\PDFs\Art101-Lab1-3.pdf">Lab 1: Getting Started</a></h4>
+				<li><h4><a href = "https://eldritchsalamancer.github.io/art101/lab2/"> Lab 2: HTML</a></h4>
+				<li><h4><a href = "https://eldritchsalamancer.github.io/art101/lab3/"> Lab 3: File Structure and Transfer</a></h4>
+                <li><h4><a href = "https://wepurpypoo.github.io/art101/lab4/"> Lab 4: Pseudocoding and Problem solving</a></h4>
+				<li><h4><a href = "https://eldritchsalamancer.github.io/art101/lab5/"> Lab 5: Data Types and Variables</a></h4>
+				<li><h4><a href = "https://wepurpypoo.github.io/art101/lab6/"> Lab 6: Arrays and Objects</a></h4>
+				<li><h4><a href = "https://wepurpypoo.github.io/art101/lab7/index.html"> Lab 7: Functions</a></h4>
+				<li><h4><a href = "https://eldritchsalamancer.github.io/art101/lab8/"> Lab 8: Anon Functions & Callbacks</a></h4>
+				<li><h4><a href = "https://eldritchsalamancer.github.io/art101/lab9/"> Lab 9: Libraries & Jquery</a></h4>
+				<li><h4><a href = "https://wepurpypoo.github.io/art101/lab10/index.html"> Lab 10: Javascript for the Web</a></h4>
+				<li><h4><a href = "https://eldritchsalamancer.github.io/art101/lab11/"> Lab 11: Javascript Events and Forms</a></h4>
+				<li><h4><a href = "https://wepurpypoo.github.io/art101/lab12/"> Lab 12: Conditionals</a></h4>
+				<li><h4><a href = "https://wepurpypoo.github.io/art101/lab13/"> Lab 13: Loops</a></h4>
+				<li><h4><a href = "https://wepurpypoo.github.io/art101/lab14/index.html"> Lab 14: Debugging Tools & Strategies</a></h4>
+				<li><h4><a href = "https://eldritchsalamancer.github.io/art101/lab15/"> Lab 15: AJAX</a></h4>
+				<li><h4><a href = "https://eldritchsalamancer.github.io/art101/lab16/"> Lab 16: JSON and APIs</a></h4>
+				<li><h4><a href = "https://matajone.github.io/art101/groupproject/index.html"> Final Project: API Public Survey Website</a></h4>
 
 			</ul>
 
 		</div> 
-	</section>
+	</main>
 </body>
 </html>
