--- a/lab4/index.html
+++ b/lab4/index.html
@@ -18,6 +18,7 @@
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script> 
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
@@ -43,6 +44,7 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
+					<canvas id="timeChart" style="width: 300px; max-width: 350px; display: block; height: 332px;" width="830" height="415" class="chartjs-render-monitor"></canvas>
 					<div id="output"></div>
 			</div>
 		</section>
